# BananaStrategy

./: .gitignore  Untitled.ipynb  back_test.py  build_market_database.py  config.json  data_transform.py  eemd_data.py  history_order.csv  lstm_run.py  pyproject.toml  run.py  run_emd_test.py  test.csv  update_A_stock_daily_data.py
core/: evaluation.py  lstm_data_processor.py  lstm_model.py  model.py  multi_factors_dig.py  utils.py
saved_models/: 27052021-155922-e10.h5  27052021-160214-e5.h5  27052021-160851-e3.h5  30052021-185021-e2.h5  30052021-185933-e2.h5  30052021-190838-e2.h5  30052021-200114-e10.h5  30052021-201114-e10.h5  30052021-201625-e10.h5  30052021-202921-e1.h5  30052021-203644-e1.h5  30052021-205625-e1.h5  30052021-210643-e1.h5  30052021-210824-e10.h5  30052021-212351-e10.h5  30052021-212912-e10.h5  30052021-213443-e10.h5  30052021-220705-e10.h5  30052021-221027-e10.h5  30052021-221126-e100.h5  30052021-221318-e30.h5
